auto-test/tests/chapter_9/valid/extra_credit/label_naming_scheme.c








int main(void) {
    
    
    
    
    
    _label:

    
    
    label_:
    return 0;
}

int main_(void) {
    label:
    return 0;
}

int _main(void) {
    label: return 0;
}