auto-test/tests/chapter_9/invalid_declarations/extra_credit/increment_fun_call.c
int x(void);

int main(void) {
    
    ++x();
}